# valenz

./: CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  org.maui.valenz.desktop.in
.github/workflows/: build.yml
scripts/: build-deb.sh  install-build-deps.sh
src/: CMakeLists.txt  main.cpp  main.qml
src/controllers/: valenzbridge.cpp  valenzbridge.h  valenzbridge_config.cpp  valenzbridge_controlcenter.cpp  valenzbridge_controlcenter_runtime.cpp  valenzbridge_helpers_inline.h  valenzbridge_mpris.cpp  valenzbridge_notifications.cpp  valenzbridge_notifications.h  valenzbridge_p.h  valenzbridge_properties.cpp  valenzbridge_systray.cpp  valenzbridge_systray.h  valenzbridge_weather.cpp  valenzbridge_workspace.cpp
src/modules/: CalendarPopup.qml  ControlCenter.qml  ControlCenterButton.qml  MprisControl.qml  MprisSourcesPopup.qml  NotificationsBubble.qml  NotificationsCenter.qml  NotificationsCenterButton.qml  SettingsDialog.qml  SystemTray.qml  WeatherClock.qml  WindowTitle.qml  WorkspaceBadge.qml  WorkspaceNavigation.qml
